# games/app/Http/Controllers/GameController.php
@@ -8,7 +8,7 @@ use App\Http\Resources\GameResource;
 
 use App\Http\Resources\GameCollection;
 use App\Http\Requests\StoreGameRequest;
-use App\Http\Requests\UpdateGamemRequest;
+use App\Http\Requests\UpdateGameRequest;
 
 class GameController extends Controller
 
@@ -170,9 +170,11 @@ class GameController extends Controller
      *      @OA\RequestBody(
      *         required=true,
      *         @OA\JsonContent(
-     *            required={"id","title", "description", "category", "price"},
-     *            @OA\Property(property="title", type="string", format="string", example="Sample Title"),
+     *            required={"id","title", "description", "category", "price", "store_id", "platforms"},
+     *           @OA\Property(property="title", type="string", format="string", example="Sample Title"),
      *            @OA\Property(property="description", type="string", format="string", example="Example description"),
+     *            @OA\Property(property="store_id", type="integer", format="integer", example="1"),
+     *            @OA\Property(property="platforms", type="integer", format="integer", example="1"),
      *            @OA\Property(property="category", type="string", format="string", example="Sports"),
      *             @OA\Property(property="price", type="integer", format="integer", example="1")
      *          )
@@ -192,7 +194,7 @@ class GameController extends Controller
 
 
 
-    public function update(UpdateGamemRequest $request, Game $game)
+    public function update(UpdateGameRequest $request, Game $game)
     {
         $game->update($request->only([
             'title', 
